<resources>
    <string name="app_name">Shopplication</string>

    <!--MainActivity-->
    <string name="completed_shopping_lists_txt">COMPLETED SHOPPING LISTS</string>
    <string name="active_shopping_lists_txt">ACTIVE SHOPPING LISTS</string>
    <string name="manage_items_txt">MANAGE ITEMS</string>
    <string name="seeItemsBtn_img_descr">seeItemsBtn img</string>
    <string name="seeCompletedShoppingListsBtn_img_descr">seeCompletedShoppingListsBtn img</string>
    <string name="seeActiveShoppingListsImgBtn_img_descr">seeActiveShoppingListsImgBtn img</string>

    <!--ItemsActivity-->
    <string name="items_activity_title">Item Management</string>
    <string name="no_items_found">No Items Found</string>
    <string name="item_name">Item Name</string>
    <string name="created_item_msg">Item created.</string>
    <string name="updated_item_msg">Item updated.</string>
    <string name="deleted_item_msg">Item deleted.</string>
    <string name="create_item_validation_msg">There is an item already created with that name.</string>

    <!--ShoppingListDisplayActivity (active shopping lists feature)-->
    <string name="shopping_lists_activity_title">Shopping List Management</string>
    <string name="no_shopping_lists_found">No Shopping Lists Found</string>
    <string name="shopping_list_name">Shopping List Name</string>
    <string name="created_shopping_list_msg">Shopping list created.</string>
    <string name="updated_shopping_list_msg">Shopping List updated.</string>
    <string name="deleted_shopping_list_msg">Shopping List deleted.</string>

    <!--ItemDisplayActivity (active shopping list items feature)-->
    <string name="add_btn_txt">ADD</string>
    <string name="item_name_actv_hint">Enter an item name</string>
    <string name="no_items_in_your_shopping_list">No items in your shopping list</string>
    <string name="collected_checkbox_text">Collected</string>
    <string name="delete_row_item_txt">DELETE</string>
    <string name="delete_row_icon_img_description">Delete row icon img</string>
    <string name="item_addition_success_msg">Item has been added to shopping list.</string>
    <string name="shopping_completed_msg">Shopping is done !</string>
    <string name="add_item_validation_msg">Please enter a name.</string>
    <string name="remove_item_snackbar_msg">removed from the shopping list!</string>
    <string name="remove_item_snackbar_undo_btn_txt">UNDO</string>
    <string name="add_item_actv_empty_txt" />

    <!--ShoppingListDisplayActivity (completed shopping lists feature)-->
    <string name="completed_shopping_lists_activity_title">Completed Shopping Lists</string>

    <!--ItemDisplayActivity (completed shopping list items feature)-->
    <string name="completed_shopping_list_txt">(Completed)</string>
    <string name="not_collected_txt">Not Collected</string>
    <string name="collected_txt">Collected</string>

    <!--AlertDialogHelper-->
    <string name="item_name_hint">Enter an item name</string>
    <string name="add_an_new_item">Add a new item</string>
    <string name="update_an_existing_item">Update an existing item</string>
    <string name="create_shopping_list_title">Create a Shopping List</string>
    <string name="update_an_existing_shopping_list">Update an existing shopping list</string>
    <string name="shopping_list_name_hint">Enter a shopping list name</string>
    <string name="alert_dialog_cancel_txt">CANCEL</string>
    <string name="alert_dialog_add_txt">ADD</string>
    <string name="alert_dialog_validation_msg">Please enter a name.</string>
    <string name="display_actions_dialog_title">Choose option</string>
    <string name="alert_dialog_update_txt">UPDATE</string>
    <string name="completed_shopping_dialog_title">CONGRATS!</string>
    <string name="completed_shopping_dialog_msg">You have collected all your items. Please tap the button on the bottom right corner to complete your shopping.</string>
    <string name="alert_dialog_ok_txt">OK</string>
    <string name="alert_dialog_create_txt">CREATE</string>

    <string-array name="action_dialog_options">
        <item>Update</item>
        <item>Delete</item>
    </string-array>

    <!-- common messages/texts -->
    <string name="error_msg">An error occurred, please try again later.</string>
    <string name="no_internet_msg">Please check your internet connection and try again.</string>
    <string name="item_dot_html">&#8226;</string>

</resources>
