<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/backgroundView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fa315b">

        <ImageView
            android:id="@+id/delete_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/delete_row_icon_img_description"
            android:src="@android:drawable/ic_delete" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@id/delete_icon"
            android:layout_toStartOf="@id/delete_icon"
            android:text="@string/delete_row_item_txt"
            android:textColor="#fff"
            android:textSize="13sp" />

    </RelativeLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/foregroundView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:paddingBottom="10dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/itemDot"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:includeFontPadding="false"
            android:lineSpacingExtra="0dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="." />

        <TextView
            android:id="@+id/itemNameLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@id/itemDot"
            android:layout_toRightOf="@id/itemDot"
            android:text="@string/item_name"
            android:textColor="@color/colorShoppingListNameLbl"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/itemNameTv"
            app:layout_constraintStart_toEndOf="@+id/itemDot"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/itemNameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemNameLbl"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/itemDot"
            android:layout_toRightOf="@id/itemDot"
            android:textColor="@color/colorNoteListText"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/itemDot"
            app:layout_constraintTop_toBottomOf="@+id/itemNameLbl"
            tools:text="Item name" />

        <CheckBox
            android:id="@+id/isCollectedCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="0dp"
            android:text="@string/collected_checkbox_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>
</FrameLayout>